--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next": "15.3.1",
     "next-auth": "5.0.0-beta.27",
     "next-themes": "^0.4.6",
+    "pdfobject": "^2.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
@@ -57,6 +58,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pdfobject": "^2.2.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "prisma": "^6.6.0",
